--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
